# quimioinformatica

./: .gitignore  404.html  README.md  _config.yml  index.html  index.md  mkdocs.yml  pyproject.toml  sitemap.xml
77_useful_code/grid_test/: index.html
HOWTO/: README.md
README/: README.md
_TPs/: index.md
_TPs/TP1/: Curso_Quimioinformática_dia_1.ipynb  index.md
_TPs/TP2/: index.md
_TPs/TP3/: Curso_Quimioinformática_dia_3.ipynb  index.md
_TPs/TP4/: index.md
_data/: instructivos.yml  teoricas.yml  tps.yml
_instructivos/: index.md
_teoricas/: index.md
_teoricas/teorica1a/: index.md
_teoricas/teorica1b/: index.md
_teoricas/teorica2/: index.md
_teoricas/teorica3/: index.md
_teoricas/teorica4/: index.md
_teoricas/teorica5/: index.md
_teoricas/teorica6/: index.md
_teoricas/teorica7/: index.md
about/: index.md  schedule.md
acerca/: index.html
contenidos/: index.html
cronograma/: index.html
docentes/: index.html
docs/: acerca.md  contenidos.md  cronograma.md  docentes.md  index.md
docs/practicos/: inicio.md
docs/teoricas/: inicio.md  resumen.md
instructivos/inicio/: index.html
instructivos/maquina_virtual/: index.html
instructivos/problemasVM/: index.html
instructivos/tipsVM/: index.html
materiales/: Curso_Quimioinformática_dia_2.ipynb  Curso_Quimioinformática_dia_4.ipynb  smiles_tabla.csv  smiles_tabla_sample.csv
practicos/TP00/: index.html
practicos/TP01/: index.html
practicos/TP02/: index.html
practicos/TP03/: index.html
practicos/TP04/: index.html
search/: search_index.json
tags/: index.html
(+64 files in other folders)
