[tool.poetry]
name = "curso-quimioinformatica-iib-unsam-mkdocs"
version = "2.0.0"
description = "Curso Quimioinformatica IIB UNSAM Mkdocs"
authors = ["Fernán Agüero <fernan@iib.unsam.edu.ar>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
mkdocs-material = ">=9.6.9"
mkdocs-video = ">=1.5.0"
pymdown-extensions = ">=10.14"
mkdocs-pymdownx-material-extras = ">=2.0.3"
fontawesome-markdown = ">=0.2.6"
mkdocs-awesome-pages-plugin = ">=2.10.1"
mkdocs-git-revision-date-plugin = ">=0.3.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
